Bug 863223 - Make canvas updates asynchronous once again